@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.213 2003/02/11 09:26:34 stelian Exp $
+$Id: CHANGES,v 1.214 2003/02/11 09:56:46 stelian Exp $
 
 Changes between versions 0.4b33 and 0.4b34 (released ?????????????????)
 =======================================================================
@@ -11,6 +11,10 @@ Changes between versions 0.4b33 and 0.4b34 (released ?????????????????)
 	instead of trying to compile them. This should fix issues
 	with old build environments. Thanks to Kari Lempiainen 
 	<kari@funky.pp.fi> for reporting the bug.
+
+3.	Fixed restore to correctly ignore sockets when comparing
+	a dump (as socket cannot be properly restored anyway). Thanks
+	to <gunther@mit.edu> for reporting the bug.
 
 Changes between versions 0.4b32 and 0.4b33 (released February 10, 2003)
 =======================================================================
